--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -27,14 +27,14 @@ a:hover {
 html,
 body {
   height: 100%;
-  background-color: #333;
+  
 }
 
 body {
   display: -ms-flexbox;
   display: flex;
-  color: #fff;
-  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  color: black;
+  
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
@@ -109,3 +109,35 @@ body {
 .mastfoot {
   color: rgba(255, 255, 255, .5);
 }
+/* mobile settings */
+@media only screen and (max-width: 767px) {
+  .video-container {
+    position:relative;
+    padding-bottom:56.25%;
+    padding-top:30px;
+    height:0;
+    overflow:hidden;
+  }
+  .video-container, .video-container object, .video-container embed {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+  }
+  iframe{
+    height: 150px;
+    width: 250px;
+  }
+  #contact{
+  font-size: 9px;
+  }
+  .card{
+    display: block;
+      margin-left: auto;
+      margin-right: auto;
+      width: 50%;
+      margin-top: 5%;
+      margin-bottom: 5%;
+  }
+  }
