--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -34,7 +34,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   color: black;
-  
+  font-family: 'Montserrat', sans-serif;
+font-weight: 500;
+  font-size: 25px;
+  line-height: 40px;
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
 }
 
@@ -87,7 +90,7 @@ body {
 #panel{
   color: azure;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  background-color: rgba(0, 0, 0, 0.507);
+  background-color: rgba(0, 0, 0, 0.719);
   height: 100%;
 }
 
